Success on article-information click float May need to alter the format of alignment on full Information to be added for all series Colour scheme still not finalized

--- a/b-a.html
+++ b/b-a.html
@@ -11,7 +11,7 @@
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
   <ul>
-    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
@@ -21,7 +21,7 @@
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
       <a class="spt" href="sports.html">Sports</a>
-      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="scif" href="sci-fif.html">Sci-Fi/Fantasy</a>
       <a class="horrs" href="h-s.html">Horror/Supernatural</a>
       <a class="drm" href="drama.html">Drama</a>
       <a class="ms" href="music.html">Music</a>
@@ -36,31 +36,31 @@
     <h1 class="pageheading">Battle/Action!</h1>
     <div></div>
     <section>
-    <article onclick="myFunction1()">
-    <img class="naruto" src="images/naruto.jpg" alt="Cover of the Naruto series">
-    <figcaption>Naruto</figcaption>
+    <article>
+    <img onclick="myFunction1()" class="naruto" src="images/naruto.jpg" alt="Cover of the Naruto series">
     <div id="myInfo1" class="infoHide1">
+    <h1 class="sr">Naruto</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction2()">
-    <img class="sds" src="images/sds.jpg" alt="Cover of the Seven Deadly Sins series">
-    <figcaption>Seven Deadly Sins</figcaption>
+    <article>
+    <img onclick="myFunction2()" class="sds" src="images/sds.jpg" alt="Cover of the Seven Deadly Sins series">
     <div id="myInfo2" class="infoHide2">
+    <h1 class="sr">Seven Deadly Sins</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction3()">
-    <img class="mha" src="images/mha.jpg" alt="Cover of the My Hero Academia series">
-    <figcaption>My Hero Academia</figcaption>
+    <article>
+    <img onclick="myFunction3()" class="mha" src="images/mha.jpg" alt="Cover of the My Hero Academia series">
     <div id="myInfo3" class="infoHide3">
+    <h1 class="sr">My Hero Academia</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction4()">
-    <img class="blkc" src="images/black-clover.jpg" alt="Cover of the Black Clover series">
-    <figcaption>Black Clover</figcaption>
+    <article>
+    <img onclick="myFunction4()" class="blkc" src="images/black-clover.jpg" alt="Cover of the Black Clover series">
     <div id="myInfo4" class="infoHide4">
+    <h1 class="sr">Black Clover</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
