--- a/comedy.html
+++ b/comedy.html
@@ -11,7 +11,7 @@
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
   <ul>
-    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
@@ -21,7 +21,7 @@
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
       <a class="spt" href="sports.html">Sports</a>
-      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="scif" href="sci-fif.html">Sci-Fi/Fantasy</a>
       <a class="horrs" href="h-s.html">Horror/Supernatural</a>
       <a class="drm" href="drama.html">Drama</a>
       <a class="ms" href="music.html">Music</a>
@@ -36,31 +36,30 @@
     <h1 class="pageheading">Comedy!</h1>
     <div></div>
     <section>
-    <article onclick="myFunction1()">
-    <img class="op" src="images/one-piece.png" alt="Cover of the One Piece series">
-    <figcaption>Naruto</figcaption>
+    <article>
+    <img onclick="myFunction1()" class="op" src="images/one-piece.png" alt="Cover of the One Piece series">
     <div id="myInfo1" class="infoHide1">
+    <h1 class="sr">One Piece</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction2()">
-    <img class="opm" src="images/opm.jpg" alt="Cover of the One Punch Man">
-    <figcaption>One Punch Man</figcaption>
+    <article>
+    <img onclick="myFunction2()" class="opm" src="images/opm.jpg" alt="Cover of the One Punch Man">
     <div id="myInfo2" class="infoHide2">
+    <h1 class="sr">One Punch Man</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction3()">
-    <img class="knsb" src="images/konosuba.jpg" alt="Cover of the Konosuba: God's Blessing on this Wonderful World series.">
-    <figcaption>Konosuba: God's Blessing on this Wonderful World</figcaption>
+    <article>
+    <img onclick="myFunction3()" class="knsb" src="images/konosuba.jpg" alt="Cover of the Konosuba: God's Blessing on this Wonderful World series.">
     <div id="myInfo3" class="infoHide3">
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction4()">
-    <img class="kthr" src="images/katekyohr.jpg" alt="Cover of the Katekyo Hitman: Reborn! series">
-    <figcaption>Katekyo Hitman Reborn!</figcaption>
+    <article>
+    <img onclick="myFunction4()" class="kthr" src="images/katekyohr.jpg" alt="Cover of the Katekyo Hitman Reborn! series">
     <div id="myInfo4" class="infoHide4">
+    <h1 class="sr">Ketekyo Hitman Reborn!</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
