--- a/drama.html
+++ b/drama.html
@@ -11,7 +11,7 @@
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
   <ul>
-    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
@@ -21,7 +21,7 @@
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
       <a class="spt" href="sports.html">Sports</a>
-      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="scif" href="sci-fif.html">Sci-Fi/Fantasy</a>
       <a class="horrs" href="h-s.html">Horror/Supernatural</a>
       <a class="drm" href="drama.html">Drama</a>
       <a class="ms" href="music.html">Music</a>
@@ -36,31 +36,31 @@
     <h1 class="pageheading">Drama!</h1>
     <div></div>
     <section>
-    <article onclick="myFunction1()">
-    <img class="ascl" src="images/assassinationcr.jpg" alt="Cover of the Assasination Classroom series.">
-    <figcaption>Assassination Classroom</figcaption>
+    <article>
+    <img onclick="myFunction1()" class="ascl" src="images/assassinationcr.jpg" alt="Cover of the Assasination Classroom series.">
     <div id="myInfo1" class="infoHide1">
+    <h1 class="sr">Assassination Classroom</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction2()">
-    <img class="crote" src="images/classroom-ote.jpg" alt="Cover of the Classroom of The Elite series.">
-    <figcaption>Classroom of The Elite</figcaption>
+    <article>
+    <img onclick="myFunction2()" class="crote" src="images/classroom-ote.jpg" alt="Cover of the Classroom of The Elite series.">
     <div id="myInfo2" class="infoHide2">
+    <h1 class="sr">Classroom of The Elite</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction3()">
-    <img class="vls" src="images/vinland-sg.jpg" alt="Cover of the Vinland Saga series.">
-    <figcaption>Vinland Saga</figcaption>
+    <article>
+    <img onclick="myFunction3()" class="vls" src="images/vinland-sg.jpg" alt="Cover of the Vinland Saga series.">
     <div id="myInfo3" class="infoHide3">
+    <h1 class="sr">Vinland Saga</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction4()">
-    <img class="tyr" src="images/tokyorvg.jpg" alt="Cover of the Tokyo Revengers series.">
-    <figcaption>Tokyo Revengers</figcaption>
+    <article>
+    <img onclick="myFunction4()" class="tyr" src="images/tokyorvg.jpg" alt="Cover of the Tokyo Revengers series.">
     <div id="myInfo4" class="infoHide4">
+    <h1 class="sr">Tokyo Revengers</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
