--- a/f-ma.html
+++ b/f-ma.html
@@ -11,7 +11,7 @@
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
   <ul>
-    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
@@ -21,7 +21,7 @@
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
       <a class="spt" href="sports.html">Sports</a>
-      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="scif" href="sci-fif.html">Sci-Fi/Fantasy</a>
       <a class="horrs" href="h-s.html">Horror/Supernatural</a>
       <a class="drm" href="drama.html">Drama</a>
       <a class="ms" href="music.html">Music</a>
@@ -36,31 +36,31 @@
     <h1 class="pageheading">Fighting/Martial Arts!</h1>
     <div></div>
     <section>
-    <article onclick="myFunction1()">
-    <img class="dbz" src="images/dragonballz.jpg" alt="Cover of the Dragon Ball Z series">
-    <figcaption>Dragon Ball Z</figcaption>
+    <article>
+    <img onclick="myFunction1()" class="dbz" src="images/dragonballz.jpg" alt="Cover of the Dragon Ball Z series">
     <div id="myInfo1" class="infoHide1">
-    <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
+    <h1 class="sr">Dragon Ball Z</h1>
+    <p class="dbztxt">TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction2()">
-    <img class="ktmd" src="images/ktmd.jpg" alt="Cover of the Kenichi The Mightiest Disciple series">
-    <figcaption>Kenichi The Mightiest Disciple</figcaption>
+    <article>
+    <img onclick="myFunction2()" class="ktmd" src="images/ktmd.jpg" alt="Cover of the Kenichi The Mightiest Disciple series">
     <div id="myInfo2" class="infoHide2">
+    <H1 class="sr">Kenichi The Mightiest Disciple</H1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction3()">
-    <img class="ka" src="images/kengana.jpg" alt="Cover of the Kengan Ashura series">
-    <figcaption>Kengan Ashura</figcaption>
+    <article>
+    <img onclick="myFunction3()" class="ka" src="images/kengana.jpg" alt="Cover of the Kengan Ashura series">
     <div id="myInfo3" class="infoHide3">
+    <h1 class="sr">Kengan Ashura</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction4()">
-    <img class="bakitg" src="images/bakitg.jpg" alt="Cover of the Baki The Grappler series">
-    <figcaption>Baki The Grappler</figcaption>
+    <article>
+    <img onclick="myFunction4()" class="bakitg" src="images/bakitg.jpg" alt="Cover of the Baki The Grappler series">
     <div id="myInfo4" class="infoHide4">
+    <h1 class="sr">Baki The Grappler</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
