--- a/h-s.html
+++ b/h-s.html
@@ -11,7 +11,7 @@
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
   <ul>
-    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
@@ -21,7 +21,7 @@
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
       <a class="spt" href="sports.html">Sports</a>
-      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="scif" href="sci-fif.html">Sci-Fi/Fantasy</a>
       <a class="horrs" href="h-s.html">Horror/Supernatural</a>
       <a class="drm" href="drama.html">Drama</a>
       <a class="ms" href="music.html">Music</a>
@@ -36,31 +36,31 @@
     <h1 class="pageheading">Horror/Supernatural!</h1>
     <div></div>
     <section>
-    <article onclick="myFunction1()">
-    <img class="csm" src="images/csm.jpg" alt="Cover of the Chainsaw Man series.">
-    <figcaption>Chainsaw Man</figcaption>
+    <article>
+    <img onclick="myFunction1()" class="csm" src="images/csm.jpg" alt="Cover of the Chainsaw Man series.">
     <div id="myInfo1" class="infoHide1">
+    <h1 class="sr">Chainsaw Man</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction2()">
-    <img class="tyg" src="images/tyg.jpg" alt="Cover of the Tokyo Ghoul series.">
-    <figcaption>Tokyo Ghoul</figcaption>
+    <article>
+    <img onclick="myFunction2()" class="tyg" src="images/tyg.jpg" alt="Cover of the Tokyo Ghoul series.">
     <div id="myInfo2" class="infoHide2">
+    <h1 class="sr">Tokyo Ghoul</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction3()">
-    <img class="berserk" src="images/berserk.jpg" alt="Cover of the Berserk series.">
-    <figcaption>Berserk</figcaption>
+    <article>
+    <img onclick="myFunction3()" class="berserk" src="images/berserk.jpg" alt="Cover of the Berserk series.">
     <div id="myInfo3" class="infoHide3">
+    <h1 class="sr">Berserk</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction4()">
-    <img class="tpn" src="images/tpnl.jpg" alt="Cover of The Promised Neverland series.">
-    <figcaption>The Promised Neverland</figcaption>
+    <article>
+    <img onclick="myFunction4()" class="tpn" src="images/tpnl.jpg" alt="Cover of The Promised Neverland series.">
     <div id="myInfo4" class="infoHide4">
+    <h1 class="sr">The Promised Neverland</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
