--- a/oreckz.html
+++ b/oreckz.html
@@ -11,7 +11,7 @@
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
   <ul>
-    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
@@ -21,7 +21,7 @@
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
       <a class="spt" href="sports.html">Sports</a>
-      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="scif" href="sci-fif.html">Sci-Fi/Fantasy</a>
       <a class="horrs" href="h-s.html">Horror/Supernatural</a>
       <a class="drm" href="drama.html">Drama</a>
       <a class="ms" href="music.html">Music</a>
@@ -50,7 +50,7 @@
     <a class="a4" href="sports.html">
     <h3 class="seriesHeading">Sports</h3>
     </a>
-    <a class="a5" href="sci-fi.html">
+    <a class="a5" href="sci-fif.html">
     <h3 class="seriesHeading">Sci-Fi/Fantasy</h3>
     </a>
     <a class="a6" href="h-s.html">
