--- a/sci-fif.html
+++ b/sci-fif.html
@@ -11,7 +11,7 @@
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
   <ul>
-    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
@@ -21,7 +21,7 @@
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
       <a class="spt" href="sports.html">Sports</a>
-      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="scif" href="sci-fif.html">Sci-Fi/Fantasy</a>
       <a class="horrs" href="h-s.html">Horror/Supernatural</a>
       <a class="drm" href="drama.html">Drama</a>
       <a class="ms" href="music.html">Music</a>
@@ -36,31 +36,31 @@
     <h1 class="pageheading">Sci-Fi/Fantasy!</h1>
     <div></div>
     <section>
-    <article onclick="myFunction1()">
-    <img class="sao" src="images/sao.jpg" alt="Cover of the Sword Art Online series.">
-    <figcaption>Sword Art Online</figcaption>
+    <article>
+    <img onclick="myFunction1()" class="sao" src="images/sao.jpg" alt="Cover of the Sword Art Online series.">
     <div id="myInfo1" class="infoHide1">
+    <h1 class="sr">Sword Art Online</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction2()">
-    <img class="cbpe" src="images/cyberpunke.jpg" alt="Cover of the Cyberpunk: Edgerunners series.">
-    <figcaption>Cyberpunk: Edgerunners</figcaption>
+    <article>
+    <img onclick="myFunction2()" class="cbpe" src="images/cyberpunke.jpg" alt="Cover of the Cyberpunk: Edgerunners series.">
     <div id="myInfo2" class="infoHide2">
+    <h1 class="sr">Cyberpunk: Edgerunners</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction3()">
-    <img class="ez" src="images/edz.jpg" alt="Cover of the Edens Zero series.">
-    <figcaption>Edens Zero</figcaption>
+    <article>
+    <img onclick="myFunction3()" class="ez" src="images/edz.jpg" alt="Cover of the Edens Zero series.">
     <div id="myInfo3" class="infoHide3">
+    <h1 class="sr">Edens Zero</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction4()">
-    <img class="gtm" src="images/gintama.jpg" alt="Cover of the Gintama series.">
-    <figcaption>Gintama</figcaption>
+    <article>
+    <img onclick="myFunction4()" class="gtm" src="images/gintama.jpg" alt="Cover of the Gintama series.">
     <div id="myInfo4" class="infoHide4">
+    <h1 class="sr">Gintama</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
@@ -79,10 +79,10 @@
     </nav>
     <p class="copyright">©2024 by Peak Reckz Ltd</p>
     </footer>
-    <link href="styles\sci-fi.css" rel="stylesheet" />
+    <link href="styles\sci-fif.css" rel="stylesheet" />
     <link
     href="https://fonts.googleapis.com/css?family=Open+Sans"
     rel="stylesheet" />
-    <script src="scripts/main-sci-fi.js"></script>
+    <script src="scripts/main-sci-fif.js"></script>
   </body>
 </html>    
