--- a/sports.html
+++ b/sports.html
@@ -11,7 +11,7 @@
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
   <ul>
-    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
@@ -21,7 +21,7 @@
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
       <a class="spt" href="sports.html">Sports</a>
-      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="scif" href="sci-fif.html">Sci-Fi/Fantasy</a>
       <a class="horrs" href="h-s.html">Horror/Supernatural</a>
       <a class="drm" href="drama.html">Drama</a>
       <a class="ms" href="music.html">Music</a>
@@ -36,31 +36,31 @@
     <h1 class="pageheading">Sports!</h1>
     <div></div>
     <section>
-    <article onclick="myFunction1()">
-    <img class="hni" src="images/hjmni.jpg" alt="Cover of the Hajime No Ippo series.">
-    <figcaption>Hajime No Ippo</figcaption>
+    <article>
+    <img onclick="myFunction1()" class="hni" src="images/hjmni.jpg" alt="Cover of the Hajime No Ippo series.">
     <div id="myInfo1" class="infoHide1">
+    <h1 class="sr">Hajime No Ippo</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction2()">
-    <img class="es21" src="images/eyeshield21.jpg" alt="Cover of the Eyeshield 21 series.">
-    <figcaption>Eyeshield 21</figcaption>
+    <article>
+    <img onclick="myFunction2()" class="es21" src="images/eyeshield21.jpg" alt="Cover of the Eyeshield 21 series.">
     <div id="myInfo2" class="infoHide2">
+    <h1 class="sr">Eyeshield 21</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction3()">
-    <img class="bluelck" src="images/bluelck.jpg" alt="Cover of the Blue Lock series.">
-    <figcaption>Bluelock</figcaption>
+    <article>
+    <img onclick="myFunction3()" class="bluelck" src="images/bluelck.jpg" alt="Cover of the Blue Lock series.">
     <div id="myInfo3" class="infoHide3">
+    <h1 class="sr">Blue Lock</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction4()">
-    <img class="kb" src="images/kurokobb.jpg" alt="Cover of the Kuroko's Basketball series">
-    <figcaption>Kuroko's Basket</figcaption>
+    <article>
+    <img onclick="myFunction4()" class="kb" src="images/kurokobb.jpg" alt="Cover of the Kuroko's Basketball series">
     <div id="myInfo4" class="infoHide4">
+    <h1 class="sr">Kuroko's Basketball</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
