--- a/music.html
+++ b/music.html
@@ -11,7 +11,7 @@
   <h1 class="pageheading">BANNER HERE!</h1>
   <nav class="intPLinks">
   <ul>
-    <li><a class="pageNav1" href="index.html" alt="Link button to homepage">Home</a></li>
+    <li><a class="pageNav1" href="home.html" alt="Link button to homepage">Home</a></li>
     <li><a class="pageNav2" href="about-us.html" alt="Link button to about us page">About Us</a></li>
     <li><div class="dropdown">
     <a class="dropdbtn" href="oreckz.html" alt="Dropdown button for genre choice and link to genre page">Our Reckz</a>
@@ -21,7 +21,7 @@
       <a class="ba" href="b-a.html">Battle/Action</a>
       <a class="cmd" href="comedy.html">Comedy</a>
       <a class="spt" href="sports.html">Sports</a>
-      <a class="scif" href="sci-fi.html">Sci-Fi/Fantasy</a>
+      <a class="scif" href="sci-fif.html">Sci-Fi/Fantasy</a>
       <a class="horrs" href="h-s.html">Horror/Supernatural</a>
       <a class="drm" href="drama.html">Drama</a>
       <a class="ms" href="music.html">Music</a>
@@ -36,31 +36,31 @@
     <h1 class="pageheading">Music!</h1>
     <div></div>
     <section>
-    <article onclick="myFunction1()">
-    <img class="ylia" src="images/ylia.jpg" alt="Cover of the Your Lie in April series.">
-    <figcaption>Your Lie in April</figcaption>
+    <article>
+    <img onclick="myFunction1()" class="ylia" src="images/ylia.jpg" alt="Cover of the Your Lie in April series.">
     <div id="myInfo1" class="infoHide1">
+    <h1 class="sr">Your Lie in April</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction2()">
-    <img class="beck" src="images/beck-mcs.jpg" alt="Cover of the Beck: Mongolian Chop Squad series.">
-    <figcaption>Beck: Mongolian Chop Squad</figcaption>
+    <article>
+    <img onclick="myFunction2()" class="beck" src="images/beck-mcs.jpg" alt="Cover of the Beck: Mongolian Chop Squad series.">
     <div id="myInfo2" class="infoHide2">
+    <h1 class="sr">Beck: Mongolian Chop Squad</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction3()">
-    <img class="so-euph" src="images/s-euph.jpg" alt="Cover of Sound Euphonium series.">
-    <figcaption>Sound! Euphonium</figcaption>
+    <article>
+    <img onclick="myFunction3()" class="so-euph" src="images/s-euph.jpg" alt="Cover of Sound Euphonium series.">
     <div id="myInfo3" class="infoHide3">
+    <h1 class="sr">Sound! Euphonium</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </article>
-    <article onclick="myFunction4()">
-    <img class="bctr" src="images/bocchitr.jpg" alt="Cover of the Bocchi The Rock! series.">
-    <figcaption>Bocchi The Rock</figcaption>
+    <article>
+    <img onclick="myFunction4()" class="bctr" src="images/bocchitr.jpg" alt="Cover of the Bocchi The Rock! series.">
     <div id="myInfo4" class="infoHide4">
+    <h1 class="sr">Bocchi The Rock!</h1>
     <p>TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE TEXT HERE </p>
     </div>
     </section>
